# xlb

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-MIT  deny.toml  release-plz.toml
.claude/: settings.json
.claude/commands/: comment.md  handoff.md  refine.md  yah-foreign.md
.github/workflows/: release-plz.yml
.yah/: .gitignore  CLAUDE.md  camp-setup.json  camp.toml  quests.md
.yah/schema/: camp.toml.schema.json  machine.toml.schema.json  mirror.toml.schema.json  provider.toml.schema.json  service.toml.schema.json  workload.toml.schema.json
crates/xlb/: CHANGELOG.md  Cargo.toml  README.md
crates/xlb-cli/: Cargo.toml
crates/xlb-cli/src/: config.rs  fetch_cmd.rs  inspect.rs  main.rs  seed_cmd.rs  serve.rs
crates/xlb-cli/src/gui/: app.rs  mod.rs  ui.rs
crates/xlb-cli/src/socket/: client.rs  mod.rs  protocol.rs  server.rs
crates/xlb-net/: CHANGELOG.md  Cargo.toml  README.md
crates/xlb-net/src/: discovery.rs  endpoint.rs  keypair.rs  lib.rs  relay.rs
crates/xlb-net/tests/: relay_acme_pebble.rs  relay_round_trip.rs
crates/xlb/examples/: register_class.rs
crates/xlb/src/: bandwidth.rs  cache.rs  lib.rs  seed.rs  source.rs  testing.rs  verify.rs
crates/xlb/src/transport/: blobs.rs  http.rs  mod.rs
crates/xlb/tests/: blobs_transport.rs  seed_fetcher.rs
