# xlb is its own Cargo workspace — it lives under yah/external/ during early
# iteration but is intended to move to its own repo. yah's `.gitignore`
# excludes `external/`, so this tree carries independent git history.
[workspace]
members = ["crates/xlb", "crates/xlb-net", "crates/xlb-cli"]
resolver = "2"

[workspace.package]
version = "0.8.15"
edition = "2021"
authors = ["yah Dev <human@yah.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yah-ai/xlb"
