[package]
name = "xlb-net"
version = "0.1.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Opinionated wrapper over iroh: per-machine Ed25519 identity, ALPN-multiplexed Endpoint, composed peer discovery (mDNS / iroh-relay swarm / pinned / external roster), and an embeddable relay server."
readme = "README.md"
keywords = ["iroh", "p2p", "quic", "discovery", "relay"]
categories = ["network-programming", "asynchronous"]

[dependencies]
anyhow = "1.0"
bytes = "1"
directories = "6.0"
futures-core = "0.3"
hex = "0.4"
iroh = { version = "1.0.0-rc.0", default-features = false, features = ["tls-ring"] }
iroh-mdns-address-lookup = "0.2.0"
iroh-relay = { version = "1.0.0-rc.0", default-features = false, features = ["server", "tls-ring", "test-utils"] }
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util", "time"] }
tracing = "0.1"
url = "2"

[dev-dependencies]
tempfile = "3.23"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"
