[package]
name = "xlb"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Chunked, Bao-verified blob distribution with multi-source concurrent fetch (LAN + peer + edge), app-namespaced"
readme = "README.md"
keywords = ["p2p", "content-addressed", "blob", "blake3", "iroh"]
categories = ["network-programming", "caching"]

[lib]
name = "xlb"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
blake3 = "1"
bytes = "1"
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
iroh ={ version = "=1.0.0-rc.0", default-features = false, features = ["tls-ring"] }
iroh-blobs = { version = "0.101.0", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
thiserror = "2.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tracing = "0.1"
mshr = { path = "../../../mshr/crates/mshr", version = "0.8.21" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
